--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "postcss": "^8.4.32",
+    "react-icons": "^4.12.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
